--- a/awx/ui/client/src/network-ui/style.less
+++ b/awx/ui/client/src/network-ui/style.less
@@ -38,6 +38,7 @@
 @blue: #337AB7;
 @light-toolbox-background: #f6f6f6;
 @icon-background-hover:@blue;
+@context-menu-text: #333;
 
 .NetworkUI {
     background-color: @light-toolbox-background;
@@ -676,13 +677,13 @@
 }
 
 .NetworkUI__contextMenuButtonText{
-    fill: #333; //@button-text;
+    fill: @context-menu-text;
     font-family: 'Open Sans';
     font-size: 14px;
 }
 
 .NetworkUI__contextMenuButtonText-hover{
-    fill: #333; //@button-text;
+    fill: @context-menu-text;
     font-family: 'Open Sans';
     font-size: 14px;
 }
