--- a/awx/ui/client/src/network-ui/style.less
+++ b/awx/ui/client/src/network-ui/style.less
@@ -1,6 +1,7 @@
 /* Copyright (c) 2017 Red Hat, Inc. */
 @import 'network-nav/network.nav.block.less';
 @import 'network-details/details.block.less';
+@import 'network-details/network-extra-vars/network-extra-vars.block.less';
 @import 'zoom-widget/zoom.block.less';
 
 @font-face {
